--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,7 +12,7 @@
 }
 
 html {
-    background: url(../image/cutbg2.jpg) no-repeat center center fixed;
+    background: url(image/cutbg2.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -34,7 +34,7 @@ html {
 }
 
 .bg-content {
-    z-index: -1;
+    z-index: 100;
     background-color: rgba(255, 255, 255, 0.644);
     top: 0;
     left: 0;
